--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>e-Hub landing page</title>
 </head>
 <body>
@@ -115,7 +115,7 @@
                     </div>
                     </div>
                     <form action="" id="form">
-                        <h3>Register and start learning in-demand skills today.</h3>
+                        <h3>Start learning in-demand skills today.</h3>
                         <div class="form-control">
                             <input id="email" type="email" placeholder="email@example.com" required>
                             <button type="submit">Get started</button>
@@ -142,7 +142,7 @@
     </footer>
 
 
-    <script src="/js/script.js"></script>
+    <script src="./js/script.js"></script>
     <script src="https://kit.fontawesome.com/03b9bb3b2d.js" crossorigin="anonymous"></script>
 </body>
 </html>
